force-app/main/default/objects/Flight_Costs_POE__c/Flight_Costs_POE__c.object-meta.xml
<CustomObject>
    <label>Flight Costs</label>
    <nameField>
        <label>Flight Costs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>