force-app/main/default/objects/Flight_Costs_POE__c/fields/Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gross_Cost__c</fullName>
    <label>Gross Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>