force-app/main/default/objects/Flight_Costs_POE__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flight Costs</relationshipLabel>
    <relationshipName>Flight_Costs_POE</relationshipName>
    <type>Lookup</type>
</CustomField>