force-app/main/default/objects/Flight_Costs_POE__c/fields/PNR_Accounting_Line__c.field-meta.xml
<CustomField>
    <fullName>PNR_Accounting_Line__c</fullName>
    <label>PNR Accounting Line</label>
    <referenceTo>PNR_Accounting_Line_POE__c</referenceTo>
    <relationshipLabel>Flight Costs</relationshipLabel>
    <relationshipName>Flight_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>